--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-
+  <a href="activities.html">Atctivites</a>
 <h1> <i class="bi bi-gift-fill"></i>  WELCOME TO MY BIRTHDAY <i class="bi bi-gift-fill"></i></h1>
 <h1> <i class="bi bi-gift-fill"></i>i would like that youy will come at <br>
     my birthday so we can go in the pool <br>
@@ -65,6 +65,7 @@
         <i class="bi bi-balloon"></i>
         <i class="bi bi-balloon"></i>
         
+
 
       </div>
             
