--- a/activities.html
+++ b/activities.html
@@ -45,11 +45,24 @@
         </div>
       </nav>
 <div><h1> activities at my birthday</h1>
-    <h1>we will chose a film to watch all togheter </h1>
-    <h1>and we will eat a lot of candy like sour patch 
-        <h1>after whe will go shopping online or whe go shop inside the city
+    <h1> my mom will come get us from scool in a limusine and then we will go at 
+      my house.
+      Then whe go shopping in some stores or we go to eat an ice cream,
+      then when we come back whe will go to a resturant to eat.
+      When we will come back we chose a film to watch all togheter.</h1>
+    <h1>And we will eat a lot of candy like sour patch...
+        <h1> whe will not go to sleeep or whe will go to sleep late like at 2/3
+          in the night.
         </h1>
+        <h1> THE PEOPLE THAT CAN COME IS: FELIX, CAMILLA, LEOPOLDO, DAVID, ADELE, IRENE AND OTHER OFMY FRIENDS
+
+
+          WHE WILL HAVE FUN!!!!!!
+        </h1>
+        <img src="Chocolate-cake-recipe-1200a.jpg" alt="">
+i
     </h1></div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
